--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -569,13 +569,13 @@ a:active {
     margin-right: auto;
 }
 
-.row {
+ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.row::after {
+ul.row::after {
     content: "";
     display: table;
     clear: both;
@@ -687,6 +687,9 @@ a:active {
 
 .footer {
     padding: var(--footer-padding);
+}
+
+.footer ul {
     text-align: right;
 }
 
